# nexium

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: check-build.yml  check.yml  release.yml
.nexiumlocall/: config.json
branding/: logo.sketch
client/: eslint.config.ts  keystore.jks  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
client/.cargo/: config.toml
client/src/: app.css  (+2 more)
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: config.rs  contacts.rs  invoice.rs  main.rs  nexium_api.rs
client/src-tauri/src/commands/: calculate_transaction_fee.rs  check_config_values.rs  check_invoice_values.rs  check_peer_status.rs  check_send_transaction.rs  contact_add.rs  contact_get.rs  contact_get_recent.rs  contact_mark_used.rs  contact_remove.rs  contact_search.rs  contact_update.rs  find_working_server.rs  get_balance.rs  get_constants.rs  get_gitlab_oauth_token.rs  get_login.rs  get_names_from_login.rs  get_peers.rs  get_server_infos.rs  get_transactions.rs  get_user_stats.rs  keypair_generation.rs  load_config.rs  load_config_from_file.rs  load_invoice_from_file.rs  mod.rs  read_key_from_file.rs  save_config.rs  save_config_to_file.rs  save_facture_to_file.rs  search_first_users.rs  send_gpg_key.rs  send_transaction.rs  try_connect_to_server.rs  write_key_to_file.rs
client/src-tauri/src/core/: config.rs  contacts.rs  mod.rs  peer_cache.rs
client/src-tauri/src/types/: balance.rs  classic_tr_received.rs  constants.rs  mod.rs  server_infos.rs
docs/: blockchain.md
lib/: Cargo.toml
lib/src/: lib.rs  types.rs
lib/src/blockchain/: consts.rs  data_type.rs  mod.rs  transaction.rs  transaction_data.rs  transaction_error.rs  transaction_header.rs
lib/src/defaults/: mod.rs
lib/src/gitlab/: error.rs  mod.rs
lib/src/login/: mod.rs
lib/src/rsa/: mod.rs
lib/src/sha256/: mod.rs
lib/src/transactions/: mod.rs
lib/src/types/: login_names.rs  mod.rs
lib/src/utils/: rand.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  peers.rs  srv_network.rs
server/src/blockchain/: blockchain.rs  errors.rs  iterator.rs  iterator_rev.rs  mempool.rs  mod.rs  test.rs
server/src/blockchain/cache/: cache.rs  mod.rs  user.rs
server/src/blockchain/structure/: block.rs  block_header.rs  consts.rs  data_type.rs  mod.rs  transaction.rs
server/src/network/: cache.rs  mod.rs  server.rs  test_.rs
server/src/network/http/: method.rs  request.rs  response.rs  status.rs
server/src/network/router/: handler.rs  mod.rs
server/src/network/router/http/: header.rs  mod.rs  request.rs  response.rs  status.rs
server/src/network/router/routes/: blockchain.rs  blockchain_download.rs  blockchain_info.rs  check_nexium.rs  get_balance.rs  get_nodes.rs  get_peers.rs  get_transactions.rs  get_user_stats.rs  mod.rs  new_node.rs  new_transaction.rs  ping.rs  register_peer.rs  sync_block.rs  sync_transaction.rs
server/src/utils/: time.rs
src/: accounts.rs  blockchain.rs  main.rs  maths.rs  random.rs  rsa.rs
web/: astro.config.mjs  package-lock.json  package.json
(+112 files in other folders)
