[package]
name = "nexium"
version = "0.1.0"
edition = "2021"
default-run = "nexium-server"


[[bin]]
name = "nexium-client"
path = "src/bin/client/main.rs"

[[bin]]
name = "nexium-server"
path = "src/bin/server/main.rs"


[lib]
name = "nexium"
path = "src/lib/main.rs"


[dependencies]
json = "0.12.4"
num-bigint = "0.4.6"
num-primes = "0.3.0"
num-traits = "0.2.19"
rusqlite = "0.34.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
