[package]
name = "nexium"
version = "0.1.0"
edition = "2021"
default-run = "nexium-server"


[[bin]]
name = "nexium-client"
path = "src/bin/client/main.rs"

[[bin]]
name = "nexium-server"
path = "src/bin/server/main.rs"


[lib]
name = "nexium"
path = "src/lib/main.rs"


[dependencies]
json = "0.12.4"
num-bigint = "0.4.6"
num-primes = "0.3.0"
base64 = "0.22.0"
rusqlite = "0.34.0"
