[package]
name = "nexium-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexium-server"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
json = "0.12.4"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
num-bigint = "0.4.6"
hex = "0.4.3"

nexium = { workspace = true }
